2003-12-28  William Jon McCann  <mccann@jhu.edu>

	* src/hand.cpp (bj_hand_show_options):
	(bj_hand_new5, bj_hand_new, bj_hand_finish, bj_hand_split):
	* src/events.cpp (drop_moving_chips): 
	* src/dialog.cpp (pref_dialog_response, show_preferences_dialog): 
	* src/slot.cpp (bj_slot_add_before_slot): 
	* src/blackjack.cpp (bj_gconf_init): 
	* src/game.cpp (bj_game_new): 
	Remove unused variables.
	
	* src/hand.cpp (bj_hand_new5): Always set the playing area text
	whether it is displayed or not.  Fixes a bug introduced by last
	change.
	 

2003-12-20  William Jon McCann  <mccann@jhu.edu>

	* src/hand.cpp (bj_hand_hit, bj_hand_double, bj_hand_finish_play): 
	* src/draw.cpp (bj_draw_set_dealer_text, bj_draw_set_player_text) 
	(bj_draw_paint_text, bj_draw_take_snapshot, bj_draw_refresh_screen):
	Use new approach for creating the text on the playing area.  Instead
	of having the hand and dealer methods called to update the text
	on screen for every screen update, have the hand and dealer set
	the markup text after every play and let the screen update render
	that when needed.  This allows the positioning of the pango layout
	to happen in draw.cpp.  And that allows positioning to scale with
	font size.

	* src/player.cpp (showProbabilities, showOptions):
	(showCount):
	Use monospace font family instead of fixed.  Use non-white color so
	that text will show up against white card if necessary.  Make
	headings bold.  Make best option bold.  Don't use a fixed font
	size.

	* src/dialog.cpp (get_insurance_choice): Insurance is for suckers or
	counters.  Make the default answer no.

2003-12-18  William Jon McCann  <mccann@jhu.edu>

	* src/menu.cpp (help_about_callback): Remove email addresses from main
	screen for space reasons.  Use angle brackets around email in credits.

	* src/game.cpp (bj_game_new): Fix leaks.

2003-12-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/strategy.cpp: Removed the #include of <iostream> since it